...
    ScreenPreviewContainer {
        TotpMainScreenPreviewContent(state = defaultTotpMainPreviewState)
    }
}

object TotpMainTestTags {
    const val TITLE = "TotpMain_Title"
    const val BACK_BUTTON = "TotpMain_BackButton"
    const val GLOBAL_ERROR_TEXT = "TotpMain_GlobalErrorText"

    const val DISABLED_DESC_TEXT = "TotpMain_DisabledDescText"
    const val SETUP_TOTP_BUTTON = "TotpMain_SetupTotpButton"
    const val DISABLED_ACTION_ERROR_TEXT = "TotpMain_DisabledActionErrorText"

    const val STEP1_TITLE = "TotpMain_Step1Title"
    const val STEP1_DESC = "TotpMain_Step1Desc"
    const val QR_CODE_BOX = "TotpMain_QrCodeBox"
    const val MANUAL_KEY_LABEL = "TotpMain_ManualKeyLabel"
    const val SECRET_KEY_TEXT = "TotpMain_SecretKeyText"
    const val COPY_SECRET_KEY_BUTTON = "TotpMain_CopySecretKeyButton"
    const val STEP2_TITLE = "TotpMain_Step2Title"
    const val STEP2_DESC = "TotpMain_Step2Desc"
    const val CODE_INPUT = "TotpMain_CodeInput"
    const val CONFIRM_SETUP_BUTTON = "TotpMain_ConfirmSetupButton"
    const val SETUP_ACTION_ERROR_TEXT = "TotpMain_SetupActionErrorText"

    const val ENABLED_TITLE = "TotpMain_EnabledTitle"
    const val ENABLED_DESC = "TotpMain_EnabledDescText"
    const val RECOVERY_CODES_BUTTON = "TotpMain_RecoveryCodesButton"
    const val DISABLE_TOTP_BUTTON = "TotpMain_DisableTotpButton"
    const val ENABLED_ACTION_ERROR_TEXT = "TotpMain_EnabledActionErrorText"
}

